--- a/META.yml
+++ b/META.yml
@@ -1,36 +1,45 @@
 ---
-name: SQL-Interp
-version: 1.10
+abstract: 'Interpolate Perl variables into SQL statements'
 author:
-  - "David Manura (http://math2.org/david/contact)"
+  - 'David Manura (http://math2.org/david/contact)'
   - 'Mark Stosberg <mark@summersault.com>'
-abstract: Interpolate Perl variables into SQL statements
+build_requires: {}
+configure_requires:
+  Module::Build: 0.38
+dynamic_config: 1
+generated_by: 'Module::Build version 0.38, CPAN::Meta::Converter version 2.110930'
 license: perl
-requires:
-  DBI: 1
-  perl: 5.8.0
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: SQL-Interp
+provides:
+  DBIx::Interp:
+    file: lib/DBIx/Interp.pm
+    version: 1.11
+  DBIx::Interp::STX:
+    file: lib/DBIx/Interp.pm
+    version: 0
+  DBIx::Interp::db:
+    file: lib/DBIx/Interp.pm
+    version: 0
+  SQL::Interp:
+    file: lib/SQL/Interp.pm
+    version: 1.11
+  SQL::Interp::SQL:
+    file: lib/SQL/Interp.pm
+    version: 0
+  SQL::Interp::Variable:
+    file: lib/SQL/Interp.pm
+    version: 0
 recommends:
   Filter::Simple: 0
   Scalar::Util: 0
   Text::Balanced: 1.87
-generated_by: Module::Build version 0.32
-meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.2.html
-  version: 1.2
-provides:
-  DBIx::Interp:
-    file: lib/DBIx/Interp.pm
-    version: 1.10
-  DBIx::Interp::STX:
-    file: lib/DBIx/Interp.pm
-  DBIx::Interp::db:
-    file: lib/DBIx/Interp.pm
-  SQL::Interp:
-    file: lib/SQL/Interp.pm
-    version: 1.10
-  SQL::Interp::SQL:
-    file: lib/SQL/Interp.pm
-  SQL::Interp::Variable:
-    file: lib/SQL/Interp.pm
+requires:
+  DBI: 1
+  Sub::Exporter: 0
+  perl: v5.8.0
 resources:
-  license: ~
+  license: http://dev.perl.org/licenses/
+version: 1.11
